# zl

./: CMakeLists.txt  INSTALL  README.md
conf/: add.xml  master.xml  submit.xml  worker.xml
src/: CMakeLists.txt  tags
src/agent/: agent.py  conf  config.py  tool.py
src/include/: attributes.h  block_queue.h  cond.h  config.h  event.h  identity.h  mutex.h  proxy.h  rapidxml.hpp  rpc.h  rwlock.h  singleton.h  system.h  thread.h
src/master/: .task.h.swp  CMakeLists.txt  config.cpp  config.h  event.cpp  event.h  executor.cpp  executor.h  executor_pool.cpp  executor_pool.h  identity.h  ip_pool.cpp  ip_pool.h  machine.cpp  machine.h  machine_pool.cpp  machine_pool.h  master.cpp  service.cpp  service.h  tags  task.cpp  task.h  task_pool.cpp  task_pool.h  task_queue.cpp  task_queue.h  trigger.cpp  trigger.h  trigger_queue.cpp  trigger_queue.h  vc_pool.cpp  vc_pool.h  virtual_cluster.cpp  virtual_cluster.h  watcher.cpp  watcher.h  work_thread.cpp
src/proxy/: clean_proxy.sh
src/proxy/master/: master.thrift
src/proxy/master/gen-cpp/: Master.cpp  Master.h  master_types.cpp  master_types.h
src/proxy/worker/: worker.thrift
src/proxy/worker/gen-cpp/: Master.cpp  Master.h  Master_server.skeleton.cpp  Worker.cpp  Worker.h  Worker_server.skeleton.cpp  master_constants.cpp  master_constants.h  master_types.cpp  master_types.h  worker_constants.cpp  worker_constants.h  worker_types.cpp  worker_types.h
src/test/: CMakeLists.txt  add_vc.cpp  cpu_usage.cpp  cpu_usage2.cpp  passion.cpp  test.cpp
src/tools/: CMakeLists.txt  add_context.cpp  add_context.h  context.h  lynn_add.cpp  lynn_submit.cpp  submit_context.cpp  submit_context.h
src/unused/: driver_manager.cpp  driver_manager.h  kvm.cpp  kvm.h
src/worker/: .vm.cpp.swp  .vm.h.swp  CMakeLists.txt  config.cpp  config.h  event.cpp  event.h  executor.cpp  executor.h  executor_pool.cpp  executor_pool.h  resource_manager.cpp  resource_manager.h  service.cpp  service.h  vm.cpp  vm.h  vm_pool.cpp  vm_pool.h  work_thread.cpp  worker.cpp
test/: add_vc  add_vc_1  add_vc_3  add_vc_4  request_pattern1  test
